--- a/style.css
+++ b/style.css
@@ -54,8 +54,14 @@ h1 {
 }
 
 .game_header {
-  margin-bottom: 100px;
+  margin-bottom: 50px;
   text-align: center;
+}
+
+.game_turn {
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 50px;
 }
 
 .game_boards {
@@ -64,6 +70,7 @@ h1 {
   justify-content: space-between;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr;
+  margin-top: 50px;
 }
 
 .board {
@@ -92,6 +99,10 @@ h1 {
   align-items: center;
   justify-content: center;
   transition: 0.25s background-color, 0.25s border ease;
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+/Edge */
+  user-select: none; /* Standard */
 }
 
 .board > div::before,
@@ -102,6 +113,7 @@ h1 {
   align-items: center;
   width: 100%;
   height: 100%;
+  color: white;
 }
 
 .board > div:nth-last-of-type(10n)::after {
@@ -121,6 +133,10 @@ h1 {
   cursor: pointer;
   background-color: hsla(211, 52%, 33.5%, 0.54);
   border: 1px solid hsl(200, 93%, 48%);
+}
+
+.hit {
+  color: red;
 }
 
 
