--- a/style.css
+++ b/style.css
@@ -139,8 +139,15 @@ p + p {
   cursor: move;
 }
 
-.draggable.dragging {
+.dragging {
   opacity: 0.5;
+}
+
+.board_box > .draggable.dragging {
+  visibility: hidden;
+  opacity: 0;
+  z-index: 0;
+  transition: 0.02s;
 }
 
 .board_box.selected {
@@ -210,7 +217,8 @@ p + p {
 .board > div {
   border: 1px solid hsl(216.3, 72.9%, 18%);
   position: relative;
-  display: flex;
+  display: grid;
+  /* display: flex; */
   /* align-items: center; */
   /* justify-content: center; */
   transition: 0.25s background-color, 0.25s border ease;
