--- a/style.css
+++ b/style.css
@@ -36,14 +36,15 @@ html {
 }
 
 body {
-  min-height: 100vh;
-  height: 100%;
+  min-height: 100%;
   background-color: rgb(3, 21, 49);
   background-color: hsl(212, 76%, 9%);
   font-family: Heebo, sans-serif;
   font-size: 1.6rem;
   line-height: 1.2;
   color: white;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 h1, h2 {
@@ -75,6 +76,11 @@ p + p {
   grid-template-columns: 1fr 1fr 1fr;
   margin: auto;
   gap: 75px;
+}
+
+.game_start {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* Board section */
@@ -151,7 +157,7 @@ p + p {
 }
 
 .board_box.selected {
-  background-color: rgb(0, 217, 255);
+  background-color: hsl(189, 100%, 50%);
 }
 
 
@@ -331,6 +337,7 @@ button {
   appearance: none;
   border: none;
   cursor: pointer;
+  transition: 0.2s all ease;
 }
 
 .restart-btn {
@@ -359,12 +366,22 @@ button {
   border-radius: 2px;
 }
 
+.start-btn {
+  padding: 20px 40px;
+}
+
+button:disabled {
+  opacity: 0.6;
+  cursor: auto;
+}
+
 
 
 
 /* ----- Utilities ----- */
 .body-flex {
   display: flex;
+  flex-direction: column;
 }
 
 .content-margin {
