--- a/app/style.css
+++ b/app/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&family=IBM+Plex+Mono:wght@100;200;300;400;500;600;700&family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap");
 
 *,
 *::before,
@@ -7,13 +7,13 @@
 }
 
 ::selection {
-  background-color: hsla(209, 75%, 37%, 0.685);
+  background-color: hsla(112.4, 95.7%, 27.6%, 0.6);
   color: white;
 }
 
 :root {
-  --accent: hsl(216, 100%, 50%);
-  --darkBlue: hsl(210, 55%, 4%);
+  --accent: hsl(115, 100%, 39%);
+  --secondaryAccent: hsl(87, 100%, 51%);
 }
 
 * {
@@ -37,17 +37,18 @@ html {
 
 body {
   min-height: 100%;
-  background-color: rgb(3, 21, 49);
-  background-color: hsl(212, 76%, 9%);
+  background-color: hsl(225, 22%, 4%);
   font-family: Heebo, sans-serif;
-  font-size: 1.6rem;
-  line-height: 1.2;
+  font-size: 1.4rem;
+  line-height: 1.3;
   color: white;
   padding-top: 20px;
   padding-bottom: 20px;
+  overflow-x: hidden;
 }
 
-h1, h2 {
+h1,
+h2 {
   line-height: 1;
 }
 
@@ -58,7 +59,7 @@ h1 {
 }
 
 h2 {
-  font-size: 2rem;
+  font-size: 1.8rem;
   font-weight: bold;
   margin-bottom: 20px;
 }
@@ -70,17 +71,80 @@ p + p {
 
 
 
+/* ----- Buttons ----- */
+button {
+  position: relative;
+  appearance: none;
+  border: none;
+  cursor: pointer;
+  font-family: "IBM Plex Mono", monospace;
+  font-size: 1.6rem;
+  transition: 0.2s all ease;
+}
+
+button:disabled {
+  opacity: 0.5;
+  cursor: auto;
+}
+
+.btn-primary,
+.btn-secondary-dark {
+  font-weight: bold;
+  padding: 15px 30px;
+}
+
+.btn-primary {
+  border: 3px solid var(--accent);
+  box-shadow: -4px 5px var(--accent);
+  color: var(--accent);
+  background: none;
+  padding: 15px 30px;
+}
+
+.btn-primary:hover {
+  background-color: var(--accent);
+  color: black;
+}
+
+.btn-secondary-dark {
+  border: 3px solid white;
+  box-shadow: -4px 5px white;
+  color: white;
+  background: none;
+  padding: 15px 30px;
+}
+
+.btn-secondary-dark:hover {
+  background-color: white;
+  color: black;
+}
+
+.btn-start {
+  padding: 20px 40px;
+  animation-delay: 0.7s;
+}
+
+
+
+
+.battleship-logo {
+  font-family: revert;
+  font-size: 0.8rem;
+  color: white;
+}
+
 /* ----- Placement screen ----- */
 .game_placement {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   margin: auto;
-  gap: 75px;
+  column-gap: 75px;
+  row-gap: 40px;
 }
 
-.game_start {
-  margin-left: auto;
-  margin-right: auto;
+.instructions_logo {
+  max-width: 350px;
+  margin-bottom: 30px;
 }
 
 /* Board section */
@@ -98,6 +162,7 @@ p + p {
 .ships_actions {
   display: flex;
   gap: 20px;
+  margin-bottom: 40px;
 }
 
 .ships_actions > button {
@@ -106,58 +171,25 @@ p + p {
 
 .ships_available {
   display: flex;
-  gap: 10px;
+  gap: 15px;
   flex-direction: column;
   align-items: flex-start;
+}
+
+.ships_available .ship {
+  position: relative;
+  top: 0%;
+  left: 0%;
 }
 
 .ships_available.vertical {
   flex-direction: row;
 }
 
-/* Ships */
-.ship {
-  display: grid;
-  grid-auto-flow: column;
-  outline: 2px solid hsl(186, 100%, 50%);
-  position: relative;
-  z-index: 2;
-}
-
-.ship-placed {
-  width: 48px;
-  height: 48px;
-}
-
-.ship.vertical {
-  /* flex-direction: column; */
-  grid-auto-flow: row;
-}
-
-.ship > div {
-  width: 48px;
-  height: 48px;
-  background-color: hsl(208.3, 59.2%, 52.9%);
-}
-
-/* Dragging classes */
-.draggable {
-  cursor: move;
-}
-
-.dragging {
-  opacity: 0.5;
-}
-
-.board_box > .draggable.dragging {
-  visibility: hidden;
-  opacity: 0;
-  z-index: 0;
-  transition: 0.02s;
-}
-
-.board_box.selected {
-  background-color: hsl(189, 100%, 50%);
+.placement_start {
+  display: flex;
+  justify-content: center;
+  grid-column: 2 / 3;
 }
 
 
@@ -169,17 +201,33 @@ p + p {
   height: 100%;
   flex-direction: column;
   justify-content: center;
+  padding-top: 50px;
 }
 
 .game_header {
-  margin-bottom: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px;
   text-align: center;
 }
 
-.game_turn {
+.game_header-logo {
+  color: var(--accent);
+}
+
+.game_status {
+  font-family: "IBM Plex Mono", monospace;
+  font-size: 1.8rem;
   font-weight: bold;
   text-align: center;
   margin-bottom: 50px;
+  padding: 20px;
+  border: 1px solid var(--accent);
+  background-color: hsla(120, 50%, 17%, 0.18);
+}
+
+#turnStatus {
+  display: inline-block;
 }
 
 .game_boards {
@@ -194,39 +242,32 @@ p + p {
 
 
 
-/* ----- Board ----- */
+/* ----- Boards ----- */
 .board {
   display: grid;
   grid-template-columns: repeat(10, 1fr);
   grid-template-rows: repeat(10, 1fr);
-  border: 2px solid hsl(200, 96%, 40%);
+  border: 2px solid var(--accent);
   aspect-ratio: 1 / 1;
   flex-grow: 1;
   counter-reset: numberCoords letterCoords;
 }
 
+.board.enemy {
+  background: none;
+  border: 2px solid hsl(0, 0%, 100%);
+}
+
 .board_box {
   width: 48px;
   height: 48px;
-}
-
-.board.enemy {
-  background-color: hsl(0, 88%, 10%);
-  border: 2px solid hsl(0, 96%, 40%);
-}
-
-.board.enemy > div {
-  border: 1px solid rgba(71, 11, 11, 0.85);
-  cursor: pointer;
-}
-
-.board > div {
-  border: 1px solid hsl(216.3, 72.9%, 18%);
   position: relative;
   display: grid;
-  /* display: flex; */
-  /* align-items: center; */
-  /* justify-content: center; */
+  align-items: center;
+  justify-items: center;
+  border: 1px solid hsl(116, 71.4%, 8%);
+  text-align: center;
+  font-size: 0.8rem;
   transition: 0.25s background-color, 0.25s border ease;
   -webkit-user-select: none; /* Safari */
   -moz-user-select: none; /* Firefox */
@@ -234,43 +275,113 @@ p + p {
   user-select: none; /* Standard */
 }
 
-.board > div::before,
-.board > div::after {
+.board_box::before,
+.board_box::after {
   position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 100%;
+  font-size: 1.4rem;
+  font-family: Heebo, sans-serif;
   color: white;
 }
 
-.board > div:nth-last-of-type(10n)::after {
+.board_box:nth-last-of-type(10n)::after {
   content: counter(numberCoords);
   top: 0%;
   transform: translateX(-100%);
   counter-increment: numberCoords;
 }
 
-.board > div:nth-child(-n+10)::before {
+.board_box:nth-child(-n+10)::before {
   content: counter(letterCoords, upper-alpha);
   transform: translateY(-100%);
   counter-increment: letterCoords;
 }
 
-.board.enemy > .hit:hover,
-.board.enemy > .not-available:hover {
-  background-color: rgba(128, 62, 62, 0.54);
-  border: 1px solid hsl(0, 62%, 75%);
+.enemy > .board_box {
+  border: 1px solid hsla(0, 0%, 13%, 0.85);
 }
 
-.board.enemy > div:hover {
-  background-color: hsla(211, 52%, 33.5%, 0.54);
-  border: 1px solid hsl(200, 93%, 48%);
+.enemy > .board_box:not(.not-available):hover {
+  cursor: pointer;
+  background-color: hsla(0, 0%, 58.4%, 0.4);
+  border: 1px solid white;
 }
 
-.hit {
+.enemy > .board_box.hit:hover,
+.enemy > .board_box.not-available:hover {
+  background-color: none;
+}
+
+.board_box.hit {
   color: red;
+  font-weight: 400;
+  line-height: 1;
+  font-size: 2.5rem;
+  font-family: "IBM Plex Mono", monospace;
+  position: relative;
+  z-index: 2;
+  color: var(--secondaryAccent);
+  border-color: hsl(119, 100%, 16%);
+  background-color: hsl(119, 100%, 16%);
+}
+
+.board_box-marker {
+  font-weight: 500;
+}
+
+/* Ships */
+.ship {
+  display: grid;
+  grid-auto-flow: column;
+  outline: 2px solid white;
+  z-index: 1;
+  position: absolute;
+  top: -1px;
+  left: -1px;
+  background-color: hsla(0, 0%, 88.2%, 0.1);
+  transition: background 0.15s ease;
+}
+
+.ship-placed {
+  width: 48px;
+  height: 48px;
+}
+
+.ship.vertical {
+  grid-auto-flow: row;
+}
+
+.ship > div {
+  width: 48px;
+  height: 48px;
+}
+
+/* Dragging classes */
+.draggable {
+  cursor: move;
+}
+
+.dragging {
+  opacity: 0.5;
+}
+
+.ship.draggable:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+.board_box > .draggable.dragging {
+  visibility: hidden;
+  opacity: 0;
+  z-index: 0;
+  transition: 0.01s;
+}
+
+.board_box.selected {
+  background-color: hsla(118, 100%, 50%, 0.65);
 }
 
 
@@ -280,6 +391,7 @@ p + p {
 .game_win-modal {
   opacity: 0;
   pointer-events: none;
+  z-index: 1;
 }
 
 .game_win-modal.active {
@@ -295,9 +407,9 @@ p + p {
   max-width: 575px;
   padding: 80px 80px 100px;
   text-align: center;
-  border-bottom: 15px solid var(--accent);
+  border-bottom: 10px solid var(--accent);
   border-radius: 10px;
-  background-color: var(--darkBlue);
+  background-color: hsl(220, 16.7%, 7.1%);
   box-shadow: 0px 8px 6.6px rgba(0, 0, 0, 0.041), 0px 23.7px 24.9px rgba(0, 0, 0, 0.055), 0px 52.9px 61.9px rgba(0, 0, 0, 0.062), 0px 107.1px 91.1px rgba(0, 0, 0, 0.067), 0px 181px 105px rgba(0, 0, 0, 0.07);
   transition: top 0.4s, opacity 0.4s ease;
   opacity: 0;
@@ -309,15 +421,16 @@ p + p {
 }
 
 .win_msg-title {
-  font-size: 5.6rem;
+  font-size: 5rem;
   font-weight: 900;
   line-height: 1;
   margin-bottom: 20px;
 }
 
 .win_msg > p {
+  font-size: 1.6rem;
   font-weight: 500;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .win_msg-img {
@@ -332,56 +445,15 @@ p + p {
 
 
 
-/* ----- Buttons ----- */
-button {
-  appearance: none;
-  border: none;
-  cursor: pointer;
-  transition: 0.2s all ease;
-}
-
-.restart-btn {
-  padding: 15px 30px;
-  font-size: 2.4rem;
-  font-weight: 800;
-  border-radius: 2px;
-  color: var(--darkBlue);
-  background-color: var(--accent);
-}
-
-.primary-btn {
-  background-color: var(--accent);
-  color: white;
-  padding: 15px 30px;
-  font-weight: 800;
-  border-radius: 2px;
-}
-
-.secondary-btn {
-  background-color: transparent;
-  color: var(--accent);
-  padding: 15px 30px;
-  font-weight: 800;
-  border: 2px solid var(--accent);
-  border-radius: 2px;
-}
-
-.start-btn {
-  padding: 20px 40px;
-}
-
-button:disabled {
-  opacity: 0.6;
-  cursor: auto;
-}
-
-
-
-
 /* ----- Utilities ----- */
 .body-flex {
   display: flex;
   flex-direction: column;
+}
+
+.margin-auto-y {
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .content-margin {
@@ -398,5 +470,9 @@ button:disabled {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: rgba(5, 21, 43, 0.7);
+  background-color: hsla(103, 26%, 5%, 0.8);
+}
+
+.accent-color {
+  color: var(--accent);
 }
