--- a/animation.css
+++ b/animation.css
@@ -87,6 +87,24 @@
   animation-timing-function: ease;
 }
 
+@keyframes shake {
+  from, to {
+    transform: translate3d(0, 0, 0);
+  }
+
+  10%, 30%, 50%, 70%, 90% {
+    transform: translate3d(-5px, 0, 0);
+  }
+
+  20%, 40%, 60%, 80% {
+    transform: translate3d(5px, 0, 0);
+  }
+}
+
+.shake {
+  animation-name: shake;
+}
+
 .animated {
   animation-duration: 0.75s;
   animation-fill-mode: both;
