--- a/style.css
+++ b/style.css
@@ -389,6 +389,16 @@ button:disabled {
   background-color: hsla(118, 100%, 50%, 0.65);
 }
 
+.ship.invalid-move {
+  outline: 2px solid red;
+  background-color: hsla(0, 100%, 50%, 0.1);
+}
+
+.ship.invalid-move:hover {
+  background-color: hsla(0, 100%, 50%, 0.1);
+  transition: 0s ease;
+}
+
 
 
 
