--- a/app/style.css
+++ b/app/style.css
@@ -12,7 +12,7 @@
 }
 
 :root {
-  --accent: hsl(115, 100%, 39%);
+  --accent: hsl(115, 100%, 45%);
   --secondaryAccent: hsl(87, 100%, 51%);
 }
 
@@ -37,14 +37,11 @@ html {
 
 body {
   min-height: 100%;
-  background-color: hsl(225, 22%, 4%);
+  background-color: hsl(105, 5%, 4.5%);
   font-family: Heebo, sans-serif;
   font-size: 1.4rem;
-  line-height: 1.3;
+  line-height: 1.35;
   color: white;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  overflow-x: hidden;
 }
 
 h1,
@@ -64,8 +61,12 @@ h2 {
   margin-bottom: 20px;
 }
 
-p + p {
+p + *  {
   margin-top: 15px;
+}
+
+li + li {
+  margin-top: 10px;
 }
 
 
@@ -139,7 +140,7 @@ button:disabled {
   grid-template-columns: 1fr 1fr 1fr;
   margin: auto;
   column-gap: 75px;
-  row-gap: 40px;
+  row-gap: 25px;
 }
 
 .instructions_logo {
@@ -149,8 +150,6 @@ button:disabled {
 
 /* Board section */
 .placement_board {
-  max-width: 500px;
-  width: 100%;
   margin: auto;
 }
 
@@ -170,6 +169,7 @@ button:disabled {
 }
 
 .ships_available {
+  min-height: 450px;
   display: flex;
   gap: 15px;
   flex-direction: column;
@@ -243,7 +243,8 @@ button:disabled {
 
 
 /* ----- Boards ----- */
-.board {
+.board,
+.board-enemy {
   display: grid;
   grid-template-columns: repeat(10, 1fr);
   grid-template-rows: repeat(10, 1fr);
@@ -253,14 +254,22 @@ button:disabled {
   counter-reset: numberCoords letterCoords;
 }
 
-.board.enemy {
+.board {
+  background-color: hsla(120, 43.8%, 6.3%, 0.4);
+}
+
+.board-enemy {
   background: none;
   border: 2px solid hsl(0, 0%, 100%);
 }
 
+.board_box,
+.ship > div {
+  width: 42px;
+  height: 42px;
+}
+
 .board_box {
-  width: 48px;
-  height: 48px;
   position: relative;
   display: grid;
   align-items: center;
@@ -301,18 +310,18 @@ button:disabled {
   counter-increment: letterCoords;
 }
 
-.enemy > .board_box {
+.board-enemy > .board_box {
   border: 1px solid hsla(0, 0%, 13%, 0.85);
 }
 
-.enemy > .board_box:not(.not-available):hover {
+.board-enemy > .board_box:not(.not-available):hover {
   cursor: pointer;
   background-color: hsla(0, 0%, 58.4%, 0.4);
   border: 1px solid white;
 }
 
-.enemy > .board_box.hit:hover,
-.enemy > .board_box.not-available:hover {
+.board-enemy > .board_box.hit:hover,
+.board-enemy > .board_box.not-available:hover {
   background-color: none;
 }
 
@@ -333,6 +342,11 @@ button:disabled {
   font-weight: 500;
 }
 
+.not-playing {
+  opacity: 0.6;
+  pointer-events: none;
+}
+
 /* Ships */
 .ship {
   display: grid;
@@ -346,11 +360,6 @@ button:disabled {
   transition: background 0.15s ease;
 }
 
-.ship-placed {
-  width: 48px;
-  height: 48px;
-}
-
 .ship.sunk {
   outline-color: var(--secondaryAccent);
   background: none;
@@ -358,11 +367,6 @@ button:disabled {
 
 .ship.vertical {
   grid-auto-flow: row;
-}
-
-.ship > div {
-  width: 48px;
-  height: 48px;
 }
 
 /* Dragging classes */
@@ -406,7 +410,7 @@ button:disabled {
 .game_win-modal {
   opacity: 0;
   pointer-events: none;
-  z-index: 1;
+  z-index: 2;
 }
 
 .game_win-modal.active {
@@ -415,7 +419,7 @@ button:disabled {
 }
 
 .win_msg {
-  position: absolute;
+  position: fixed;
   top: calc(50% - 30px);
   left: 50%;
   transform: translate(-50%, -50%);
@@ -482,7 +486,7 @@ button:disabled {
 .dark-overlay {
   top: 0;
   left: 0;
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
   background-color: hsla(103, 26%, 5%, 0.8);
@@ -490,4 +494,131 @@ button:disabled {
 
 .accent-color {
   color: var(--accent);
+}
+
+.txt-600 {
+  font-weight: 600;
+}
+
+
+
+
+@media screen and (max-width: 1300px) {
+  .game {
+    padding-top: 30px;
+  }
+
+  .game_status {
+    font-size: 1.4rem;
+    margin-bottom: 10px;
+    padding: 15px;
+  }
+
+  .game_placement {
+    column-gap: 60px;
+  }
+
+  .battleship-logo {
+    font-size: 0.6rem;
+  }
+
+  .board_box,
+  .ship > div {
+    width: 35px;
+    height: 35px;
+  }
+
+  .board_box.hit {
+    font-size: 1.8rem;
+  }
+
+  .board_box::before,
+  .board_box::after {
+    font-size: 1.2rem;
+  }
+}
+
+@media screen and (max-width: 1140px) {
+  .game_placement {
+    grid-template-rows: auto 1fr auto;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .placement_instructions {
+    grid-column: 1 / 3;
+    max-width: 90ch;
+    margin: auto;
+  }
+
+  .placement_start {
+    grid-column: 1 / 3;
+  }
+
+  .ships_actions {
+    max-width: 400px;
+  }
+
+  .ships_available {
+    min-height: 350px;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .game_boards {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 70px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  h2 {
+    font-size: 1.6rem;
+  }
+
+  .game_placement {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto 1fr auto;
+  }
+
+  .instructions_logo {
+    max-width: 100%;
+    text-align: center;
+  }
+
+  .placement_board {
+    width: auto;
+  }
+
+  .placement_start {
+    grid-column: initial;
+  }
+
+  .board {
+    grid-template-columns: repeat(10, auto);
+    grid-template-rows: repeat(10, auto);
+  }
+
+  .board_box,
+  .ship > div {
+    width: 32px;
+    height: 32px;
+  }
+
+  .ships_available {
+    display: none;
+  }
+
+  .ships_actions {
+    max-width: 400px;
+    margin: auto;
+  }
+
+  button {
+    font-size: 1.4rem;
+  }
+
+  .btn-primary, .btn-secondary-dark {
+    padding: 13px 30px;
+  }
 }
