--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Courier+Prime&family=Heebo:wght@100;200;300;400;500;600;700;800;900&family=IBM+Plex+Mono:wght@100;200;300;400;500;600;700&family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&family=IBM+Plex+Mono:wght@100;200;300;400;500;600;700&family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap");
 
 @font-face {
   font-family: "DejaVu Sans Mono Bold";
-  src: url("./fonts/DejaVuSansMono-Bold.ttf") format("truetype");
+  src: url("./ui/fonts/DejaVuSansMono-Bold.ttf") format("truetype");
   font-weight: bold;
   font-style: bold;
 }
